--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(POOSistemaGestionVentas)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(POOSistemaGestionVentas main.cpp)
+add_executable(POOSistemaGestionVentas main.cpp
+        Producto.cpp
+        Producto.h)
